# hopper-ollama

./: .gitignore  LICENSE  README.md  hopper_ollama_template.py  install.py  pyproject.toml  uninstall.py
hopper_ollama/: __init__.py  ollama_client.py  prompts.py
tests/: __init__.py  mock_hopper_ollama.py  test_hopper_ollama.py
