[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopper-ollama"
version = "0.1.0"
description = "Hopper + Ollama: in-Hopper script and MCP tools for LLM-powered binary analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5,<3",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hopper_ollama"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
